tests/neg-custom-args/captures/cc-this4.check
-- Error: tests/neg-custom-args/captures/cc-this4.scala:1:11 -----------------------------------------------------------
1 |open class C: // error
  |           ^
  |           class C needs an explicitly declared self type since its
  |           inferred self type {} C
  |           is not visible in other compilation units that define subclasses.
